<package>
  <name>rosleap</name>
  <version>0.0.2</version>
  <description>

     Uses Leap Motion SDK to get the position and pitch/yaw/roll of one hand in the frame and publish on topic /leap. Created by Matt Broussard and Robert Lynch for the Building Wide Intelligence project at The University of Texas at Austin.

  </description>
  <author>Matt Broussard</author>
  <author>Robert Lynch</author>
  <maintainer email="mattb@cs.utexas.edu">Matt Broussard</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
